--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,21 +1,21 @@
-env: # Environt variable to pass to all tasks
-     # CIRRUS_CLONE_DEPTH: 1 # No need to clone with whole history
-    CIRRUS_WORKING_DIR: "/tmp/ci" # Where to clone repo
+env:
+    CIRRUS_CLONE_DEPTH: 1
+    CIRRUS_WORKING_DIR: "/tmp/ci"
 
 task:
-    name: zeta # Project name
-    timeout_in: 120m # Otherwise it will timeout at 60m automatically, 120m highest in free account
+    name: zeta
+    timeout_in: 120m
     container:
       dockerfile: Dockerfile
-      cpu: 8  #8 cpu for dummy build, 10 or more cpu for final build, sometimes more than 8 cpu will cause a timelock, so you wont be able to run ci again within few hours, in build script use -j8 or -j10 depending what you used here, otherwise low memory issue will happen, 16cpu highest
-      memory: 24G # So that we can have ram when needed, 24G highest
-    download_ccache_background_script: # To download ccache in background
-      - ./download_ccache # Ccache download script
-    sync_script: # To sync source
-      - ./sync # Source sync script
-    monitor_background_script: # To monitor ccache and machine status every minute, runs in background
-      - ./monitor # Monitor script
-    build_script: # Actual build script foreground
-      - ./build # Build script to run
-    upload_ccache_script: # Upload ccache to cloud foreground
-      - ./upload_ccache # Ccache uploading script
+      cpu: 8
+      memory: 24G
+    download_ccache_background_script:
+      - ./download_ccache
+    sync_script:
+      - ./sync
+    monitor_background_script:
+      - ./monitor
+    build_script:
+      - ./build
+    upload_ccache_script:
+      - ./upload_ccache
