--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,21 +1,20 @@
-env:
-    CIRRUS_CLONE_DEPTH: 1
-    CIRRUS_WORKING_DIR: "/tmp/ci"
-
 task:
-    name: zeta
+    name: rom
     timeout_in: 120m
     container:
       dockerfile: Dockerfile
       cpu: 8
-      memory: 24G
+      memory: 32G
+    environment:
+      CIRRUS_CLONE_DEPTH: 1
+      CIRRUS_WORKING_DIR: "/tmp/ci"
     download_ccache_background_script:
-      - ./download_ccache
+      - bash download_ccache
     sync_script:
-      - ./sync
+      - bash sync
     monitor_background_script:
-      - ./monitor
+      - bash monitor
     build_script:
-      - ./build
+      - bash build
     upload_ccache_script:
-      - ./upload_ccache
+      - bash upload_ccache
