--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,11 @@
 task:
     name: rom
-    timeout_in: 120m
+    timeout_in: 4h
+    persistent_worker: {}
     container:
-      dockerfile: Dockerfile
-      cpu: 8
-      memory: 32G
+      image: apon77/aosp:cirrus
+      cpu: 16
+      memory: 60G
     environment:
       CIRRUS_CLONE_DEPTH: 1
       CIRRUS_WORKING_DIR: "/tmp/ci"
