--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ task:
     name: rom
     timeout_in: 4h
     container:
-      dockerfile: Dockerfile
+      image: apon77/aosp:cirrus
       cpu: 8
       memory: 32G
     environment:
